--- a/Andthink_Simple/app/src/main/res/layout/activity_main.xml
+++ b/Andthink_Simple/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/white">
+
+        <ImageView
+            android:id="@+id/iv_menu"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@mipmap/ic_menu" />
+
+        <ImageView
+            android:layout_toRightOf="@+id/iv_menu"
+            android:src="@mipmap/titile_home"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp" />
+
+        <ImageView
+            android:id="@+id/iv_add"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_toLeftOf="@+id/iv_search"
+            android:padding="15dp"
+            android:src="@mipmap/ic_puls" />
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
+            android:src="@mipmap/ic_search" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
