--- a/Andthink_Simple/app/src/main/res/layout/activity_main.xml
+++ b/Andthink_Simple/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,61 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/bottombar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/white">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/iv_menu"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:padding="12dp"
-            android:src="@mipmap/ic_menu" />
-
-        <ImageView
-            android:layout_toRightOf="@+id/iv_menu"
-            android:src="@mipmap/titile_home"
+            android:id="@+id/iv_home"
             android:layout_width="wrap_content"
-            android:layout_height="48dp" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@mipmap/home_normal" />
 
         <ImageView
-            android:id="@+id/iv_add"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_toLeftOf="@+id/iv_search"
-            android:padding="15dp"
-            android:src="@mipmap/ic_puls" />
+            android:id="@+id/iv_type"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@mipmap/type_normal" />
 
         <ImageView
-            android:id="@+id/iv_search"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:padding="15dp"
-            android:src="@mipmap/ic_search" />
+            android:id="@+id/iv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@mipmap/message_normal" />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/iv_personal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@mipmap/me_normal" />
 
+    </LinearLayout>
+
+    <View
+        android:id="@+id/bottombar_divider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_above="@id/bottombar"
+        android:background="@color/divider_color" />
+
+    <FrameLayout
+        android:id="@+id/center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottombar_divider" />
 
 </RelativeLayout>
+
