--- a/Andthink_Simple/app/src/main/res/layout/fragment_home.xml
+++ b/Andthink_Simple/app/src/main/res/layout/fragment_home.xml
@@ -3,4 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/white">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/title" />
+
+    </RelativeLayout>
+
 </LinearLayout>
